--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "grapesjs": "^0.21.12",
     "grapesjs-blocks-basic": "^1.0.2",
+    "grapesjs-plugin-export": "^1.0.12",
     "grapesjs-tui-image-editor": "^1.0.2",
     "lucide-react": "^0.418.0",
     "react": "^18.3.1",
