again back basic block

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "grapesjs": "^0.21.12",
+    "grapesjs-blocks-basic": "^1.0.2",
     "grapesjs-custom-code": "^1.0.2",
     "grapesjs-plugin-export": "^1.0.12",
     "grapesjs-tui-image-editor": "^1.0.2",
